[gd_scene load_steps=2 format=3 uid="uid://b2qsf61v6ub01"]

[ext_resource type="Script" path="res://menus/SupportMenu.gd" id="1_wjubd"]

[node name="SupportMenu" type="PanelContainer"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -470.0
offset_top = 538.0
offset_right = -295.0
offset_bottom = 668.0
grow_horizontal = 2
script = ExtResource("1_wjubd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Select a unit to use as a support or pass."
horizontal_alignment = 1
autowrap_mode = 2

[node name="PassButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Pass"

[connection signal="pressed" from="MarginContainer/VBoxContainer/PassButton" to="." method="_on_pass_support_button_pressed"]
